--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "express": "^4.16.4"
   },
   "devDependencies": {
+    "axios": "^0.18.0",
+    "cheerio": "^1.0.0-rc.2",
     "eslint": "^5.15.3",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0"
