--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/domain-combine/dc-server#readme",
   "dependencies": {
     "cron": "^1.7.0",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "selenium-webdriver": "^4.0.0-alpha.1"
   },
   "devDependencies": {
     "eslint": "^5.15.3",
