--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cheerio": "^1.0.0-rc.2",
     "cron": "^1.7.0",
     "express": "^4.16.4",
+    "puppeteer": "^1.14.0",
     "selenium-webdriver": "^4.0.0-alpha.1"
   },
   "devDependencies": {
