--- a/package.json
+++ b/package.json
@@ -17,12 +17,7 @@
   },
   "homepage": "https://github.com/domain-combine/dc-server#readme",
   "dependencies": {
-    "axios": "^0.18.0",
-    "cheerio": "^1.0.0-rc.2",
-    "cron": "^1.7.0",
-    "express": "^4.16.4",
-    "puppeteer": "^1.14.0",
-    "selenium-webdriver": "^4.0.0-alpha.1"
+    "express": "^4.16.4"
   },
   "devDependencies": {
     "eslint": "^5.15.3",
