--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/domain-combine/dc-server#readme",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "ioredis": "^4.9.5"
   },
   "devDependencies": {
     "eslint": "^5.15.3",
